labs/idmocp-52-init-container/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: freeipa-master
  # annotations: {}
  # labels:
  #   deployment: freeipa-master
  #   deploymentconfig: freeipa
  # generateName: freeipa-master-
spec:
  hostname: freeipa-master
  containers:
    - image: "quay.io/avisied0/freeipa-openshift-container:dev-test"
      imagePullPolicy: Always
      name: freeipa
      ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        - containerPort: 80
          protocol: TCP
        - containerPort: 88
          protocol: TCP
        - containerPort: 88
          protocol: UDP
        - containerPort: 123
          protocol: UDP
        - containerPort: 389
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        - containerPort: 464
          protocol: TCP
        - containerPort: 464
          protocol: UDP
        - containerPort: 636
          protocol: TCP
      resources: {}
      securityContext:
        privileged: true
      volumemounts:
        - mountPath: /data
          name: freeipa
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-br6yz
          readOnly: true
  # https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-dns-config
  dnsPolicy: "Default"
